[package]
name = "dungeon_crawl"
version = "0.1.0"
edition = "2018"
authors = ["Erick Coble <ecoble19@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8"
legion = "0.3.1"
serde = {version = "1.0"}
ron = "0.6"

[profile.release]
lto = "thin"